--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,13 +1,16 @@
 /* ===== | All | ===== */
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #0A1931;
     color: #EFEFEF;
 }
 
 img {
-    height: 300px;
-    width: 400px;
+    width: 25%;
     border-radius: 5px;
 }
 
@@ -91,21 +94,21 @@ p {
     display: flex;
     flex-direction: row;
     background-color: #185ADB;
-    height: 300px;
+    /* height: 300px; */
 }
 
 .project__pachygatchi {
     display: flex;
     flex-direction: row;
     background-color: #0A1931;
-    height: 300px;
+    /* height: 300px; */
 }
 
 .project__wayfarer {
     display: flex;
     flex-direction: row;
     background-color: #185ADB;
-    height: 300px;
+    /* height: 30%; */
 }
 
 .project__info {
@@ -121,6 +124,7 @@ p {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
+    float: right;
 }
 
 #projects__header {
@@ -132,6 +136,7 @@ p {
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-end;
+    float: left;
 }
 
 .project__title {
@@ -154,7 +159,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 200px;
+    width: 100%;
     border-radius: 3px;
 }
 
@@ -163,7 +168,7 @@ p {
     flex-direction: column;
     align-items: center;
     height: 150px;
-    width: 500px;
+    width: 250%;
     border-radius: 3px;
 }
 
