--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -12,6 +12,8 @@ body {
 img {
     width: 25%;
     border-radius: 5px;
+    height: auto;
+    max-width: 100%;
 }
 
 p {
@@ -72,7 +74,6 @@ p {
 .projects {
     display: flex;
     flex-direction: row;
-    width: 100%;
 }
 
 #projects__header {
