--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -184,7 +184,7 @@ p {
 
 /* ===== | Media Queries  | ===== */
 
-@media only screen and (max-width: 400px) {
+@media only screen {
     .info,
     .info__intro,
     .info__about,
@@ -197,14 +197,14 @@ p {
     }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen {
     .project__pachygatchi {
         display: flex;
         flex-direction: column-reverse;
     }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen {
     img {
         max-width: 100%;
     }
