--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -59,7 +59,7 @@ p {
     justify-content: flex-start;
 }
 
-.info__header {
+h2 {
     font-size: 3em;
     font-family: 'Shadows Into Light', cursive;
 }
