--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -207,6 +207,6 @@ h2 {
 
 @media only screen and (max-width: 480px) {
     .intro__header {
-        text-align: right;
+        text-align: center;
     }
 }
