--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -208,5 +208,6 @@ h2 {
 @media only screen and (max-width: 480px) {
     .intro__header {
         text-align: center;
+        font-size: x-large;
     }
 }
