--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -151,7 +151,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #EFEFEF;
+    color: #05386B;
 }
 
 .contact__email {
