--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -151,6 +151,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     color: #05386B;
 }
 
@@ -174,6 +175,12 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 40px;
+    width: 60px;
+    background-color: #EDF5E1;
+    color: #05386B;
+    border-color: #05386B;
+    border-radius: 10px;
 }
 
 .contact__header {
